# apertium-spa-glg

./: AUTHORS  Makefile.am  README  README.md  apertium-spa-glg.glg-spa.t1x  apertium-spa-glg.spa-glg.dix  apertium-spa-glg.spa-glg.t1x  configure.ac  modes.xml
dev/: test-sentences-spa-glg.txt  test-sentences-spa.txt  test-translations.sh
test/: glg-spa-chunker-expected.txt  glg-spa-disam-expected.txt  glg-spa-input.txt  glg-spa-postgen-expected.txt  glg-spa-postgen-gold.txt  glg-spa-pretransfer-expected.txt  spa-glg-chunker-expected.txt  spa-glg-generator-expected.txt  spa-glg-input.txt  spa-glg-morph-expected.txt  spa-glg-postgen-gold.txt  spa-glg-tagger-expected.txt  tests.json
